Fixed chart header alignment

--- a/src/style/visualizations/main.sass
+++ b/src/style/visualizations/main.sass
@@ -24,10 +24,10 @@ $box-shadow: 0 6px 38px -18px rgba(0, 0, 0, 0.3), 0 11px 12px -12px rgba(0, 0, 0
     box-shadow: $element-box-shadow
 
     &.municipalities-chart
-      padding: 10px 30px 32px
+      padding: 0 0 32px 32px
 
     @media only screen and (min-width: 768px)
-      padding: 10px 30px 32px
+      padding: 0 0 32px 32px
 
     div.loader
       min-height: 450px
@@ -38,17 +38,27 @@ $box-shadow: 0 6px 38px -18px rgba(0, 0, 0, 0.3), 0 11px 12px -12px rgba(0, 0, 0
     justify-content: flex-end
     align-items: center
     min-width: 100%
-    
+    height: 92px
+    padding: 0 18px
+
+    @media only screen and (min-width: 768px)
+      padding: 0 32px 0 0
+
   .title-brand-wrapper
     margin-right: auto
     
+    //I am to lazy to put a wrapper class on a div pls feel free to do this
+    + div 
+      display: flex
+      align-items: center
+
     h2
-      font-size: 18px
+      font-size: 21px
       line-height: 28px
       font-weight: bold
-      padding: 22px 16px
+      // padding: 22px 16px
       background: #fff
-      margin-bottom: 10px
+      margin-bottom: 0
 
       a
         color: black
@@ -87,7 +97,6 @@ $box-shadow: 0 6px 38px -18px rgba(0, 0, 0, 0.3), 0 11px 12px -12px rgba(0, 0, 0
       border: solid 1px rgba(0, 0, 0, 0.13)
       cursor: pointer
       padding: 3px 8px
-      margin-right: 16px
       
       .share-button-caption
         display: inline-block
